# cmd-council

./: .env.example  .gitignore  LICENSING.md  README.md  council.openrouter.yaml  council.yaml  pyproject.toml
cmd_council/: __init__.py  budget.py  cli.py  config.py  license.py  license_cli.py  models.py  pipeline.py  pricing.py  prompts.py  provider.py  ranking.py  server.py  storage.py  webhook.py
integrations/hermes/: README.md  SKILL.md  council_tool.py
tests/: test_budget.py  test_license.py  test_passthrough.py  test_pipeline.py  test_ranking.py  test_webhook.py
