[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cmd-council"
version = "0.1.0"
description = "LLM Council on a single Command Code subscription — cross-lab advisors + a premium chairman, with quota-aware economics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
council = "cmd_council.cli:main"
council-license = "cmd_council.license_cli:main"

[tool.setuptools]
packages = ["cmd_council"]
